python/src/rabbit/manifests/rmq-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  serviceName: "not-applicable"
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 15672
          name: http
          protocol: TCP 
        - containerPort: 567
          name: amqp
          protocol: TCP 
        volumeMounts:
        - name: rabbitmq-volume
          mountPath: "/var/lib/rabbitmq"
      volumes:
      - name: rabbitmq-volume
        persistentVolumeClaim:
          claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - port: 15672
    name: http
    targetPort: 15672                                        
    protocol: TCP
  - port: 5672
    name: amqp
    targetPort: 5672                                        
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
spec:
  rules:
  - host: rabbitmq-manager.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rabbitmq
            port: 
              number: 15672
